--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "bcrypt": "^6.0.0",
+    "mongoose": "^9.1.5",
     "next": "16.1.4",
     "react": "19.2.3",
     "react-dom": "19.2.3"
