--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@imagekit/next": "^2.1.3",
     "@types/bcrypt": "^6.0.0",
     "bcrypt": "^6.0.0",
+    "lucide-react": "^0.563.0",
     "mongoose": "^9.1.5",
     "next": "16.1.4",
     "next-auth": "^4.24.13",
